ceylondoc fix package navigation alignment

--- a/compiler-java/src/com/redhat/ceylon/ceylondoc/resources/ceylondoc.css
+++ b/compiler-java/src/com/redhat/ceylon/ceylondoc/resources/ceylondoc.css
@@ -88,10 +88,6 @@ code {
     font-size: 16px;
 }
 
-.sub-navbar-package .package-identifier .link {
-    vertical-align: top;
-}
-
 .sub-navbar-menu {
 	margin-top: 1em;
 	text-align: center;
@@ -227,6 +223,7 @@ code {
 
 .sub-navbar-name .package-identifier a {
     font-family: 'Source Sans Pro', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    vertical-align: top;
 }
 
 .modifiers {
